86c6jmw1e: fixed the issues copilot reviewed